# radiant

./: .gitignore  Cargo.toml  README.md  domain_extraction_inventory.tsv
.github/workflows/: radiant-ci.yml
benches/: perf_harness.rs
benches/perf_harness/: app_projection.rs  args.rs  baseline.rs  catalog.rs  command_drain.rs  layout_scenarios.rs  resource_scenarios.rs  runner.rs  runtime_scenarios.rs  text_scenarios.rs
docs/: API.md  API_STYLE.md  ARCHITECTURE.md  DESIGN_DIRECTION.md  TARGET.md
examples/: animation_showcase.rs  arrangement_shell.rs  background_loading.rs  busy_progress.rs  context_menu.rs  counter.rs  curve_area_fill.rs  custom_shader_surface.rs  custom_widget.rs  devtools_overlay.rs  dpi_scaling.rs  eq_editor.rs  floating_overlay.rs  focus_controls.rs  folder_browser.rs  form.rs  generic_native.rs  gpu_surface.rs  gpu_surface_stack_overlay.rs  grid_gallery.rs  hello_world.rs  host_surface_frame.rs  inspector_panel.rs  keys.rs  layer_host.rs  layout_diagnostics.rs  layout_rows_columns.rs  list.rs  list_actions.rs  message_routing.rs  mixer_console.rs  modulation_matrix.rs  multi_window_manifest.rs  native_file_drop.rs  node_editor.rs  paint_helpers.rs  passive_widgets.rs  piano_roll.rs  plugin_panel.rs  popup_window.rs  (+23 more)
examples/animation_showcase/: model.rs  pulse_meter.rs  tests.rs  view.rs
examples/arrangement_shell/: geometry.rs  mod.rs  model.rs  paint.rs  tests.rs  view.rs  widget.rs  widget_paint.rs
examples/eq_editor/: model.rs  tests.rs  widget.rs
examples/folder_browser/: actions.rs  columns.rs  file_view.rs  menu_geometry.rs  model.rs  state.rs  storage.rs  tests.rs  tree.rs  view.rs
examples/gpu_surface_stack_overlay/: gpu_content.rs  model.rs  selection_overlay.rs  tests.rs  transient_overlay.rs  view.rs
examples/layout_rows_columns/: model.rs  tests.rs  view.rs
examples/mixer_console/: mod.rs  model.rs  paint.rs  panel.rs  panel_paint.rs  tests.rs  update.rs  view.rs
examples/modulation_matrix/: geometry.rs  mod.rs  model.rs  paint.rs  tests.rs  view.rs  widget.rs  widget_paint.rs
examples/node_editor/: model.rs  tests.rs  view.rs
examples/piano_roll/: drag.rs  geometry.rs  mod.rs  model.rs  paint.rs  tests.rs  view.rs  widget.rs  widget_paint.rs
examples/popup_window/: host.rs  launcher.rs  model.rs  platform.rs  policy.rs  popup.rs  tests.rs
examples/render_canvas_stack_overlay/: gpu_content.rs  model.rs  selection_overlay.rs  tests.rs  view.rs
examples/spectrogram/: model.rs  tests.rs  widget.rs
examples/split_workspace/: model.rs
examples/status_bar/: model.rs  paint.rs  tests.rs  update.rs  view.rs
examples/theme_playground/: model.rs  report.rs  tests.rs  view.rs
examples/timeline_editor/: model.rs  tests.rs  widget.rs
examples/todo_list/: model.rs  tests.rs  view.rs
examples/toolbar_icons/: icon_button.rs  icons.rs  model.rs  tests.rs  view.rs
examples/tree_and_details/: data.rs
examples/waveform_view/: model.rs  source.rs  tests.rs  view.rs  widget.rs
scripts/: dev_app_bundle.sh
src/: application.rs  compat.rs  env_flags.rs  ergonomic.rs  guardrails.rs  lib.rs  prelude.rs  theme.rs
src/app/: actions.rs  automation.rs  bridge.rs  browser.rs  declarative.rs  dirty_segments.rs  hotkeys.rs  mod.rs  motion.rs  shell.rs  sources.rs  waveform.rs  waveform_tempo.rs
src/application/: builders.rs  compatibility.rs  control_builders.rs  details_list.rs  facade.rs  form_row.rs  ids.rs  labeled_control.rs  launch.rs  layout_builders.rs  menu.rs  option_list.rs  panel_section.rs  presentation.rs  property_panel.rs  repaint_policy.rs  retained_canvas.rs  runtime.rs  state.rs  status_bar.rs  text_content.rs  toolbar.rs  tree_list.rs  view_node.rs  widget_view.rs
src/compat/: legacy_native_vello.rs  runtime_artifacts.rs
src/gui/: automation.rs  badge.rs  chrome.rs  disclosure.rs  feedback.rs  fingerprint.rs  flow.rs  focus.rs  form.rs  frame.rs  input.rs  invalidation.rs  list.rs  mod.rs  paint.rs  panel.rs  range.rs  repaint.rs  retained.rs  selection.rs  shortcuts.rs  snapshot.rs  svg.rs  text_layout.rs  types.rs  undo.rs  visualization.rs
src/gui_runtime/: egui_wgpu.rs  mod.rs  native_vello.rs  options.rs  window_manifest.rs
src/prelude/: application.rs  gui.rs  layout.rs  runtime.rs  theme.rs  widgets.rs
src/runtime/: automation.rs  bridge.rs  command.rs  controller.rs  devtools.rs  diagnostics.rs  drag.rs  external_drag.rs  file_drop.rs  file_open.rs  gpu_surface.rs  mod.rs  paint.rs  platform.rs  resource.rs  surface.rs  update_snapshot.rs
src/theme/: dark.rs  scale.rs  tests.rs  visual_policy.rs
src/widgets/: contract.rs  interaction.rs  mod.rs  primitives.rs  theme.rs
tests/: app_runtime_api.rs  application_builder_public_api.rs  compat_sempal_shell_public_api.rs  compat_status_bar_pilot.rs  custom_widget_public_api.rs  generic_extraction_ownership.rs  generic_surface_guardrails.rs  layout_public_api.rs  runtime_bridge_public_api.rs  runtime_surface_public_api.rs  surface_hover_public_api.rs  surface_node_public_api.rs  surface_scroll_public_api.rs  surface_widget_helpers_public_api.rs  widgets_primitive_behaviors.rs  widgets_public_api.rs
tests/app_runtime_api/: gpu_surface.rs  lifecycle.rs  paint_overlay.rs  render_canvas.rs  runtime_diagnostics.rs  runtime_work.rs  scroll_hooks.rs  shortcuts.rs  tasks_platform.rs
tests/application_builder_public_api/: builder_core.rs  collection_layout.rs  composition.rs  controls.rs  details.rs  prelude_exports.rs  runtime_behavior.rs  runtime_options.rs  support.rs  typography.rs
tests/custom_widget_public_api/: builders.rs  hover.rs  runtime_paths.rs  support.rs
tests/generic_surface_guardrails/: behavior_suite.rs  docs.rs  dynamic_widgets.rs  examples.rs  native_vello.rs  package_structure.rs  public_api.rs  source_quality.rs  support.rs
tests/runtime_bridge_public_api/: capabilities.rs  command_flow.rs  diagnostics.rs  lifecycle.rs  resources.rs  state_projection.rs
tests/runtime_surface_public_api/: automation.rs  commands.rs  devtools.rs  focus_text.rs  interaction.rs  invalidation.rs  (+3 more)
tmp/: improvement_audit_plan.md
(+1984 files in other folders)
