[package]
name = "radiant"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[dependencies]
arboard = "3.6.1"
roxmltree = "0.21.1"
winit = "0.30.12"
raw-window-handle = "0.6"
pollster = "0.4.0"
vello = "0.7.0"
skrifa = "0.40.0"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = []
gui-performance = []

[[example]]
name = "generic_native"
path = "examples/generic_native.rs"
test = false

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
test = false

[[example]]
name = "counter"
path = "examples/counter.rs"
test = false

[[example]]
name = "todo_list"
path = "examples/todo_list.rs"
test = false

[[example]]
name = "form"
path = "examples/form.rs"
test = false

[[example]]
name = "layout_rows_columns"
path = "examples/layout_rows_columns.rs"
test = false

[[example]]
name = "list"
path = "examples/list.rs"
test = false

[[example]]
name = "styling"
path = "examples/styling.rs"
test = false

[[example]]
name = "scroll"
path = "examples/scroll.rs"
test = false

[[example]]
name = "sizing"
path = "examples/sizing.rs"
test = false

[[example]]
name = "message_routing"
path = "examples/message_routing.rs"
test = false

[[example]]
name = "keys"
path = "examples/keys.rs"
test = false

[[example]]
name = "custom_widget"
path = "examples/custom_widget.rs"
test = false

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
image = "0.25.9"
