[package]
name = "radiant"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[dependencies]
arboard = "3.6.1"
roxmltree = "0.21.1"
winit = "0.30.12"
raw-window-handle = "0.6"
pollster = "0.4.0"
vello = "0.7.0"
skrifa = "0.40.0"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = []
gui-performance = []

[[example]]
name = "generic_native"
path = "examples/generic_native.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "animation_showcase"
path = "examples/animation_showcase.rs"

[[example]]
name = "background_loading"
path = "examples/background_loading.rs"

[[example]]
name = "todo_list"
path = "examples/todo_list.rs"

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "layout_rows_columns"
path = "examples/layout_rows_columns.rs"

[[example]]
name = "folder_browser"
path = "examples/folder_browser.rs"

[[example]]
name = "tree_and_details"
path = "examples/tree_and_details.rs"

[[example]]
name = "inspector_panel"
path = "examples/inspector_panel.rs"

[[example]]
name = "context_menu"
path = "examples/context_menu.rs"

[[example]]
name = "paint_helpers"
path = "examples/paint_helpers.rs"

[[example]]
name = "passive_widgets"
path = "examples/passive_widgets.rs"

[[example]]
name = "waveform_view"
path = "examples/waveform_view.rs"

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "virtualized_list"
path = "examples/virtualized_list.rs"

[[example]]
name = "styling"
path = "examples/styling.rs"

[[example]]
name = "scroll"
path = "examples/scroll.rs"

[[example]]
name = "sizing"
path = "examples/sizing.rs"

[[example]]
name = "message_routing"
path = "examples/message_routing.rs"

[[example]]
name = "keys"
path = "examples/keys.rs"

[[example]]
name = "custom_widget"
path = "examples/custom_widget.rs"

[[example]]
name = "gpu_surface"
path = "examples/gpu_surface.rs"

[[bench]]
name = "perf_harness"
path = "benches/perf_harness.rs"
harness = false

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
hound = "3.5.1"
image = "0.25.9"
