[package]
name = "radiant"
version = "0.1.0"
edition = "2024"
description = "A Windows-first, backend-neutral Rust GUI library with declarative views, Vello rendering, and retained GPU surfaces."
license = "CC0-1.0"
readme = "README.md"
repository = "https://github.com/PORTALSURFER/radiant"
keywords = ["gui", "desktop", "vello", "wgpu"]
categories = ["gui"]
exclude = ["tmp/**"]

[lints.rust]
warnings = "deny"
missing_docs = "deny"

[dependencies]
arboard = "3.6.1"
winit = "0.30.12"
raw-window-handle = "0.6"
pollster = "0.4.0"
vello = "0.7.0"
kurbo = "0.13.0"
skrifa = "0.40.0"
tracing = "0.1.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
roxmltree = "0.21.1"
vello_svg = { version = "0.9.0", default-features = false }
rfd = "0.16.0"
open = "5.3.3"

[features]
default = []
gui-performance = []

[[example]]
name = "generic_native"
path = "examples/generic_native.rs"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "multi_window_manifest"
path = "examples/multi_window_manifest.rs"

[[example]]
name = "popup_window"
path = "examples/popup_window.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "animation_showcase"
path = "examples/animation_showcase.rs"

[[example]]
name = "background_loading"
path = "examples/background_loading.rs"

[[example]]
name = "typography"
path = "examples/typography.rs"

[[example]]
name = "todo_list"
path = "examples/todo_list.rs"

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "volume_slider"
path = "examples/volume_slider.rs"

[[example]]
name = "list_actions"
path = "examples/list_actions.rs"

[[example]]
name = "toolbar_icons"
path = "examples/toolbar_icons.rs"

[[example]]
name = "svg"
path = "examples/svg.rs"

[[example]]
name = "status_bar"
path = "examples/status_bar.rs"

[[example]]
name = "layout_rows_columns"
path = "examples/layout_rows_columns.rs"

[[example]]
name = "grid_gallery"
path = "examples/grid_gallery.rs"

[[example]]
name = "widget_gallery"
path = "examples/widget_gallery.rs"

[[example]]
name = "folder_browser"
path = "examples/folder_browser.rs"

[[example]]
name = "tree_and_details"
path = "examples/tree_and_details.rs"

[[example]]
name = "split_workspace"
path = "examples/split_workspace.rs"

[[example]]
name = "node_editor"
path = "examples/node_editor.rs"

[[example]]
name = "inspector_panel"
path = "examples/inspector_panel.rs"

[[example]]
name = "context_menu"
path = "examples/context_menu.rs"

[[example]]
name = "floating_overlay"
path = "examples/floating_overlay.rs"

[[example]]
name = "paint_helpers"
path = "examples/paint_helpers.rs"

[[example]]
name = "layout_diagnostics"
path = "examples/layout_diagnostics.rs"

[[example]]
name = "rendering_benchmark"
path = "examples/rendering_benchmark.rs"

[[example]]
name = "host_surface_frame"
path = "examples/host_surface_frame.rs"

[[example]]
name = "passive_widgets"
path = "examples/passive_widgets.rs"

[[example]]
name = "waveform_view"
path = "examples/waveform_view.rs"

[[example]]
name = "timeline_editor"
path = "examples/timeline_editor.rs"

[[example]]
name = "list"
path = "examples/list.rs"

[[example]]
name = "virtualized_list"
path = "examples/virtualized_list.rs"

[[example]]
name = "styling"
path = "examples/styling.rs"

[[example]]
name = "theme_playground"
path = "examples/theme_playground.rs"

[[example]]
name = "dpi_scaling"
path = "examples/dpi_scaling.rs"

[[example]]
name = "scroll"
path = "examples/scroll.rs"

[[example]]
name = "sizing"
path = "examples/sizing.rs"

[[example]]
name = "message_routing"
path = "examples/message_routing.rs"

[[example]]
name = "keys"
path = "examples/keys.rs"

[[example]]
name = "focus_controls"
path = "examples/focus_controls.rs"

[[example]]
name = "plugin_panel"
path = "examples/plugin_panel.rs"

[[example]]
name = "eq_editor"
path = "examples/eq_editor.rs"

[[example]]
name = "spectrogram"
path = "examples/spectrogram.rs"

[[example]]
name = "mixer_console"
path = "examples/mixer_console.rs"

[[example]]
name = "piano_roll"
path = "examples/piano_roll.rs"

[[example]]
name = "modulation_matrix"
path = "examples/modulation_matrix.rs"

[[example]]
name = "arrangement_shell"
path = "examples/arrangement_shell.rs"

[[example]]
name = "custom_widget"
path = "examples/custom_widget.rs"

[[example]]
name = "gpu_surface"
path = "examples/gpu_surface.rs"

[[example]]
name = "custom_shader_surface"
path = "examples/custom_shader_surface.rs"

[[example]]
name = "gpu_surface_stack_overlay"
path = "examples/gpu_surface_stack_overlay.rs"

[[bench]]
name = "perf_harness"
path = "benches/perf_harness.rs"
harness = false

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }
windows-core = "0.62.2"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
image = "0.25.9"
